# E-com_leather_jacket

./: README.md  compose.yml
app/: .env.examplefile  Dockerfile  LICENSE  README.md  pyproject.toml
app/app/: main.py
app/app/crud/: image_crud.py  product_crud.py
app/app/database/: db.py  seed.py
app/app/review_crud/: review_crud.py
app/app/review_routes/: routes.py
app/app/rout/: imag_rout.py  product_rout.py
app/app/scema/: product_model.py  schema.py  sign_up_schema.py
app/app/search/: search.py  search_rout.py
app/app/utlis/: config.py  image_utlis.py
app/tests/: test_image.py  test_product.py
