[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hamadalishah <hammadalis459@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"
multipart = "^1.2.1"
python-multipart = "^0.0.20"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
